objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>NoTestWarning__c</fullName>
        <label>No Test Warning</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PriorizeDate__c</fullName>
        <formula>IF(TEXT(Status__c) == &apos;Priority&apos;, NOW(), LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RunTest__c</fullName>
        <label>Run Tests</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskName__c</fullName>
        <externalId>true</externalId>
        <label>Task Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Deploy</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>URL__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>PriorizeDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>VECI</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deploy</value>
        </filters>
        <label>Deploy</label>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>URL__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress</label>
    </listViews>
    <listViews>
        <fullName>Not_completed</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>URL__c</columns>
        <columns>Description__c</columns>
        <columns>PriorizeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Utility</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>VECI</value>
        </filters>
        <label>VECI Not completed</label>
    </listViews>
    <listViews>
        <fullName>Utility</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>URL__c</columns>
        <columns>Description__c</columns>
        <columns>PriorizeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Utility</value>
        </filters>
        <label>Utility</label>
    </listViews>
    <listViews>
        <fullName>currentSprint</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>URL__c</columns>
        <columns>Description__c</columns>
        <columns>PriorizeDate__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Project__c</field>
            <operation>equals</operation>
            <value>VECI</value>
        </filters>
        <filters>
            <field>Deployment__c</field>
            <operation>equals</operation>
            <value>Sprint37</value>
        </filters>
        <label>currentSprint</label>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>